# agent-auth

./: .gitignore  README.md  alembic.ini  docker-compose.yml  flake.nix  policy.example.yaml  pyproject.toml
.gitea/workflows/: build.yml
deploy/: k8s.yaml
docs/: hermes-setup.md
scripts/: e2e.py
src/agent_auth/: authority.py  cli.py  client.py  config.py  crypto.py  db.py  main.py  mcp_server.py  models.py  schemas.py  serve.py
src/agent_auth/api/: a2a_routes.py  admin_routes.py  agent_routes.py  app.py  catalog.py  deps.py  serialize.py
src/agent_auth/core/: a2a.py  events.py  scheduler.py  service.py  states.py
src/agent_auth/discord_bot/: bot.py  embeds.py  views.py
src/agent_auth/migrations/: env.py
src/agent_auth/migrations/versions/: 3ed47f6283bc_initial_schema.py  a1b2c3d4e5f6_add_kubernetes_platform.py  b2c3d4e5f6a7_rule_scope.py  c3d4e5f6a7b8_collapse_authority.py  d4e5f6a7b8c9_a2a_threads_sessions.py  e5f6a7b8c9d0_delegated_auth.py  f6a7b8c9d0e1_responder_sessions.py
src/agent_auth/policy/: engine.py  llm.py  schema.py
src/agent_auth/provisioners/: a2a.py  base.py  github.py  google_stub.py  kubernetes.py  lldap.py
tests/: conftest.py  test_a2a.py  test_api.py  test_delegation.py  test_discord.py  test_kubernetes.py  test_lifecycle.py  test_mcp_sessions.py  test_policy.py  test_provisioners.py  test_serve.py
