[project]
name = "agent-auth"
version = "0.1.0"
description = "Discord-surfaced credential broker for AI agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "discord.py>=2.4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42",
    "typer>=0.12",
    "mcp>=1.2",
    "pyyaml>=6.0",
]

[project.scripts]
agent-auth = "agent_auth.cli:app"
agent-auth-server = "agent_auth.main:run"
agent-auth-mcp = "agent_auth.mcp_server:run"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_auth"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
